--- a/.github/workflows/helpers.yaml
+++ b/.github/workflows/helpers.yaml
@@ -1,13 +1,14 @@
-name: Update sitemap
+name: Some helper functions to make my life easier
 
 on:
   push:
     paths-ignore:
+      - "revision/index.html"
       - "sitemap.txt"
 
 jobs:
-  py:
-    name: Run main.py
+  sitemap:
+    name: Update homepage and sitemap
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -20,7 +21,7 @@ jobs:
         python-version: ${{ matrix.python-version }}
     - name: Run Python file
       run: |
-        python main.py
+        python helpers.py
     - name: Stage changes
       run: git add .
     - name: Commit and push
