Workflow for new file

--- a/.github/workflows/helpers.yaml
+++ b/.github/workflows/helpers.yaml
@@ -1,4 +1,4 @@
-name: Some helper functions to make my life easier
+name: Some helper functions
 
 on:
   push:
@@ -7,6 +7,27 @@ on:
       - "sitemap.txt"
 
 jobs:
+  newpage:
+    name: Create a new page
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python-version: [3.9]
+    steps:
+    - uses: actions/checkout@v2
+    - name: Set up Python ${{ matrix.python-version }}
+      uses: actions/setup-python@v2
+      with:
+        python-version: ${{ matrix.python-version }}
+    - name: Run Python file
+      run: |
+        python newpage.py
+    - name: Stage changes
+      run: git add .
+    - name: Commit and push
+      uses: stefanzweifel/git-auto-commit-action@v4
+      with:
+        commit_message: "Add new page"
   sitemap:
     name: Update homepage and sitemap
     runs-on: ubuntu-latest
@@ -27,4 +48,4 @@ jobs:
     - name: Commit and push
       uses: stefanzweifel/git-auto-commit-action@v4
       with:
-        commit_message: "Helper function updated homepage and/or sitemap"
+        commit_message: "Update index and/or sitemap"
