--- a/.github/workflows/helpers.yaml
+++ b/.github/workflows/helpers.yaml
@@ -1,10 +1,6 @@
 name: Helper functions
 
-on:
-  push:
-    paths-ignore:
-      - "revision/index.html"
-      - "sitemap.txt"
+on: push
 
 jobs:
   helpers:
