--- a/.github/workflows/helpers.yaml
+++ b/.github/workflows/helpers.yaml
@@ -4,7 +4,7 @@ on: push
 
 jobs:
   helpers:
-    name: Helper functions
+    name: Run helper functions on ${{ github.event.head_commit.message }}
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -18,13 +18,9 @@ jobs:
     - name: Run Python file
       run: |
         python helpers.py
-    - name: Set variables
-      shell: bash
-      run: |
-        echo "sha_short=$(git rev-parse --short "$GITHUB_SHA")" >> "$GITHUB_ENV"
     - name: Stage changes
       run: git add .
     - name: Commit and push
       uses: stefanzweifel/git-auto-commit-action@v4
       with:
-        commit_message: Helper function updates (${{ steps.vars.outputs.sha_short }} ${{ github.event.head_commit.message }})
+        commit_message: Helper function updates (${{ github.event.head_commit.message }})
